--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,4 +1,6 @@
 :root {
+  --whiteColor: #fff;
+
   --backgroundMenu: #fff;
   --backgroundContent: #f2f2f2;
 
@@ -6,7 +8,10 @@
   --activePage: #6f4ff2;
   --disablePage: #65646a;
   --mainColor: #000;
+  --hoverColor: #65646a;
 
   --redColor: #dc3546;
   --priceColor: #6c7aa0;
+
+  --perfectColor: #000;
 }
