--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -442,3 +442,74 @@ footer a {
   color: var(--accentColor);
   font-weight: 600;
 }
+
+@media (width <= 768px) {
+  body {
+    display: block;
+  }
+
+  .menuPanel {
+    width: 100%;
+    height: 60px;
+    background-color: var(--backgroundMenu);
+    position: fixed;
+    max-width: none;
+    text-align: center;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-self: center;
+    align-items: center;
+    align-content: center;
+    bottom: 0px;
+  }
+
+  .logoFont {
+    font-size: 30px;
+    color: var(--accentColor);
+    display: none;
+  }
+
+  .logo {
+    position: absolute;
+    top: 0px;
+  }
+
+  .menuList {
+    color: var(--disablePage);
+    position: static;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0px 30px;
+  }
+
+  .activePage {
+    color: var(--activePage);
+  }
+
+  .menuList li {
+    font-size: 22px;
+  }
+
+  .contentMenu:nth-child(2) {
+    margin-block-start: 0;
+  }
+
+  .contentMenu:not(:nth-child(2)) {
+    margin-block-start: 0;
+  }
+
+  .accontBtn {
+    position: static;
+    margin-block-start: 0px;
+  }
+
+  /* content */
+
+  .content {
+    margin-inline-start: 0;
+  }
+}
