--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ a {
 }
 
 .contentMenu:not(:nth-child(2)) {
-  margin-block-start: 49px;
+  margin-block-start: 2.55vw;
 }
 
 .accontBtn {
@@ -429,6 +429,11 @@ a {
   font-weight: 600;
   line-height: normal;
   cursor: pointer;
+}
+
+.btnCard:hover {
+  transition: 0.3s;
+  background-color: #8a71ee;
 }
 
 footer {
